--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "mouse-cursor",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@rnwcode/vue-mouse-cursor",
+  "version": "0.0.2",
+  "private": false,
+  "main": "./dist/mouse-cursor.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-bundle": "vue-cli-service build --target lib --name mouse-cursor ./src/components/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -18,6 +20,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -42,5 +46,18 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
+  ],
+  "keywords": [
+    "vue.js",
+    "custom-cursor",
+    "inverted cursor",
+    "component"
+  ],
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
   ]
 }
